# reagent-python

./: .gitignore  LICENSE  README.md  contourpy-1.3.1-cp310-cp310-macosx_11_0_arm64.whl  fonttools-4.55.3-cp310-cp310-macosx_10_9_universal2.whl  geopandas-1.0.1-py3-none-any.whl  ipython-8.31.0-py3-none-any.whl  kiwisolver-1.4.8-cp310-cp310-macosx_11_0_arm64.whl  pillow-11.1.0-cp310-cp310-macosx_11_0_arm64.whl  pyproject.toml  shapely-2.0.6-cp310-cp310-macosx_11_0_arm64.whl  wordcloud-1.9.4-cp310-cp310-macosx_11_0_arm64.whl
examples/: 1-getting-started.ipynb  2-repo-case-study-generator.ipynb  2024-18-deepseek-ai-study.ipynb  case-study-generator.ipynb  composite_scores.ipynb  current-visualizations.ipynb  getting-started.ipynb  harbor-case-study.ipynb  harbor-vis-test.ipynb  istio-istio-case-study.ipynb  istio-proxy-case-study.ipynb  repo-case-study-generator.ipynb
reagentpy/: ReagentClient.py  __init__.py  cli.py  constants.py
reagentpy/clients/: __init__.py  commit.py  community.py  composite_scores.py  enrichments.py  generic.py  repo.py  user.py
reagentpy/visualizations/: __init__.py  boe_visualizations.py  demo_visualizations.py  timezone_visualizations.py
tests/: reagent-client-class.py
